# axis-axis2-c-rampart

./: AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  NOTICE  README  bindist.sh  build.sh  configure.ac  project.properties  project.xml  rampart-bindist.sh  release_process  sd.sh
c/: INSTALL  README
include/: axis2_key_type.h  openssl_cipher_ctx.h  openssl_cipher_property.h  openssl_constants.h  openssl_crypt.h  openssl_digest.h  openssl_hmac.h  openssl_pem.h  openssl_pkcs12.h  openssl_pkcs12_keystore.h  openssl_pkey.h  openssl_rsa.h  openssl_sign.h  openssl_util.h  openssl_x509.h  oxs_asym_ctx.h  oxs_axiom.h  oxs_axis2_utils.h  oxs_buffer.h  oxs_c14n.h  oxs_cipher.h  oxs_constants.h  oxs_ctx.h  oxs_derivation.h  oxs_encryption.h  oxs_error.h  oxs_iv.h  oxs_key.h  oxs_key_mgr.h  oxs_saml_token.h  oxs_sign_ctx.h  oxs_sign_part.h  oxs_signature.h  oxs_token_binary_security_token.h  oxs_token_c14n_method.h  oxs_token_cipher_data.h  (+121 more)
samples/: ABOUT_SAMPLES  Makefile.am  README  build.sh  configure.ac
samples/authn_provider/: Makefile.am  authn_provider.c
samples/callback/: Makefile.am  pwcb.c
samples/callback/htpasswd_callback/: Makefile.am  htpwcb.c
samples/client/: Makefile.am  client_axis2.xml  deploy_client_repo.bat
samples/client/issued_token/: Makefile.am  echo.c
samples/client/saml_echo/: Makefile.am  echo.c  update_n_run.bat
samples/client/saml_protect/: Makefile.am  echo.c  update_n_run.bat
samples/client/sec_echo/: Makefile.am  deploy_client_repo.bat  echo.c  echo_helper.c  echo_helper.h  update_n_run.bat  update_n_run.sh
samples/client/sec_echo/data/: Makefile.am  client.axis2.xml
samples/client/sts_client/: Makefile.am  client.c
samples/credential_provider/: Makefile.am  cred_provider.c
samples/data/: Makefile.am  passwords.txt
samples/keys/ahome/: Makefile.am
samples/keys/bhome/: Makefile.am
samples/keys/xhome/: Makefile.am
samples/keys/yhome/: Makefile.am
samples/omxmlsec/xmlenc/: Makefile.am  enc.c
samples/omxmlsec/xmlsig/: Makefile.am  sign.c
samples/replay_detector/: Makefile.am  rampart_replay_detector_flat_file.c
samples/sct_provider/: Makefile.am  sct_provider_hash_map.c  sct_provider_stored_key.c
samples/secpolicy/: README  README.txt  deploy.bat  deploy.js  deploy.sh  run_all.bat  run_all.js  run_all.sh  test_scen.bat  test_scen.sh  win_deploy.bat
samples/secpolicy/scenario1/: client-policy.xml  services.xml
samples/secpolicy/scenario10/: client-policy.xml  services.xml
samples/secpolicy/scenario11/: client-policy.xml  services.xml
samples/secpolicy/scenario12/: client-policy.xml  services.xml
samples/secpolicy/scenario13/: client-policy.xml  services.xml
samples/secpolicy/scenario14/: client-policy.xml  services.xml
samples/secpolicy/scenario15/: client-policy.xml  services.xml
samples/secpolicy/scenario16/: client-policy.xml  services.xml
samples/secpolicy/scenario17/: client-policy.xml  services.xml
samples/secpolicy/scenario18/: client-policy.xml  services.xml
samples/secpolicy/scenario19/: client-policy.xml  services.xml
samples/secpolicy/scenario2/: client-policy.xml  services.xml
samples/secpolicy/scenario20/: client-policy.xml  services.xml
samples/secpolicy/scenario21/: client-policy.xml  services.xml
samples/secpolicy/scenario22/: client-policy.xml  services.xml
samples/secpolicy/scenario23/: client-policy.xml  services.xml
samples/secpolicy/scenario24/: client-policy.xml  services.xml
samples/secpolicy/scenario25/: client-policy.xml  services.xml
samples/secpolicy/scenario26/: client-policy.xml  services.xml
samples/secpolicy/scenario27/: client-policy.xml  services.xml
samples/secpolicy/scenario28/: client-policy.xml  services.xml
samples/secpolicy/scenario3/: client-outgoing-secpolicy.xml  client-policy.xml  service-incoming-secpolicy.xml  services.xml
samples/secpolicy/scenario4/: client-outgoing-secpolicy.xml  client-policy.xml  service-incoming-secpolicy.xml  services.xml
samples/secpolicy/scenario5/: client-outgoing-secpolicy.xml  client-policy.xml  service-incoming-secpolicy.xml  services.xml  tcpmon-trace5.txt
samples/secpolicy/scenario6/: client-outgoing-secpolicy.xml  client-policy.xml  service-incoming-secpolicy.xml  services.xml
samples/secpolicy/scenario7/: client-incoming-secpolicy.xml  client-outgoing-secpolicy.xml  service-incoming-secpolicy.xml  services.xml
samples/secpolicy/scenario8/: client-incoming-secpolicy.xml  client-outgoing-secpolicy.xml  client-policy.xml  service-incoming-secpolicy.xml  service-outgoing-secpolicy.xml  services.xml
samples/secpolicy/scenario9/: client-outgoing-secpolicy.xml  client-policy.xml  service-incoming-secpolicy.xml  services.xml
samples/secpolicy/sym_enc/: client-policy.xml  services.xml
samples/secpolicy/sym_enc_sig/: client-policy.xml  services.xml
samples/secpolicy/sym_enc_sig_encsig/: client-policy.xml
samples/secpolicy/sym_sig/: client-policy.xml  services.xml
samples/secpolicy/sym_sig_enc/: client-policy.xml  services.xml
samples/server/: Makefile.am
samples/server/saml_sts/: Makefile.am  issuer.c  saml_skeleton.c  server_axis2.xml  services.xml
samples/server/sec_echo/: Makefile.am  echo.c  echo_skeleton.c  server_axis2.xml  services.xml
samples/server/secconv_echo/: Makefile.am  echo.c  server_axis2.xml
src/core/: Makefile.am  mod_rampart.c
src/trust/: Makefile.am  claims.c  context.c  entropy.c  policy_util.c  rst.c  rstr.c  sts_client.c  trust_util.c  util.c
src/util/: Makefile.am  rampart_config.c  rampart_context.c  rampart_crypto_util.c  rampart_encryption.c  rampart_engine.c  rampart_error.c  rampart_handler_util.c  rampart_issued.c  rampart_issued_token.c  rampart_neethi.c  rampart_policy_validator.c  rampart_rd_record.c  rampart_replay_detector.c  rampart_saml.c  rampart_saml_token.c  rampart_sec_header_builder.c  rampart_sec_header_processor.c  rampart_sec_processed_result.c  rampart_signature.c  rampart_timestamp_token.c  rampart_token_builder.c  rampart_token_processor.c  rampart_username_token.c  rampart_util.c  timestamp_token.c  username_token.c
(+187 files in other folders)
